RESOLVED FIXED76126
REGRESSION (r94016): Element with visibility:hidden but visible descendant may not be properly repainted
https://bugs.webkit.org/show_bug.cgi?id=76126
Summary REGRESSION (r94016): Element with visibility:hidden but visible descendant ma...
hrant.novikov
Reported 2012-01-11 16:50:55 PST
Setting visibility:hidden and position:fixed to an outer element then overriding the properties to visible and relative/absolute respectively breaks rendering. This seems to be a regression that occurred in the 534 - 535 range (Safari is not affected Chrome 15+ is) and can be reproduced as early as r103795 running under Safari 5.1.2 (didn't try other revisions or browsers).
Attachments
test case (364 bytes, text/html)
2012-01-12 12:28 PST, Alexey Proskuryakov
no flags
Proposed fix: correct the optimization to not forget some cases. (5.08 KB, patch)
2012-01-17 06:37 PST, Julien Chaffraix
no flags
Patch for landing (5.33 KB, patch)
2012-01-28 09:41 PST, Julien Chaffraix
no flags
Alexey Proskuryakov
Comment 1 2012-01-12 12:28:37 PST
Alexey Proskuryakov
Comment 2 2012-01-12 12:28:58 PST
Created attachment 122290 [details] test case Same test as an attachment.
Julien Chaffraix
Comment 3 2012-01-17 06:37:17 PST
Created attachment 122758 [details] Proposed fix: correct the optimization to not forget some cases.
Simon Fraser (smfr)
Comment 4 2012-01-20 11:39:14 PST
Is this different to the fix I made yesterday, http://trac.webkit.org/changeset/105471 ?
Julien Chaffraix
Comment 5 2012-01-20 12:08:10 PST
(In reply to comment #4) > Is this different to the fix I made yesterday, http://trac.webkit.org/changeset/105471 ? Yes. This bug does not involve composited layers at all and is about scrolling.
Julien Chaffraix
Comment 6 2012-01-27 15:27:51 PST
Simon, could you look at this patch when you have a minute? I really would like to knock this regression out.
Simon Fraser (smfr)
Comment 7 2012-01-28 01:12:38 PST
Comment on attachment 122758 [details] Proposed fix: correct the optimization to not forget some cases. View in context: https://bugs.webkit.org/attachment.cgi?id=122758&action=review > LayoutTests/fast/layers/scroll-no-visible-content-but-visible-descendant.html:28 > +<div style="overflow: hidden; visibility: hidden;" id="outerDiv"> > + <div style="position: relative; background: red; visibility: visible;"></div> > + <div style="position: relative; overflow: hidden; visibility: visible;"> > + <div style="background: green"></div> > + </div> I'd prefer the style to not be inline, and use descriptive class names.
Julien Chaffraix
Comment 8 2012-01-28 09:41:27 PST
Created attachment 124438 [details] Patch for landing
WebKit Review Bot
Comment 9 2012-01-28 11:29:02 PST
Comment on attachment 124438 [details] Patch for landing Clearing flags on attachment: 124438 Committed r106191: <http://trac.webkit.org/changeset/106191>
WebKit Review Bot
Comment 10 2012-01-28 11:29:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.