REGRESSION (r94016): Element with visibility:hidden but visible descendant may not be properly repainted https://bugs.webkit.org/show_bug.cgi?id=76126

Reviewed by Simon Fraser.

Source/WebCore:

Tests: fast/layers/scroll-no-visible-content-but-visible-descendant-expected.html
       fast/layers/scroll-no-visible-content-but-visible-descendant.html

The optimization missed out that if the current layer does not have some visible content
(m_hasVisibleContent is false), a descendant could totally be visible and would need to
have its repaint rectangles recomputed.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateLayerPositionsAfterScroll):
Bail out only if the layer doesn't have visible content AND no visible descendants.

LayoutTests:

Added testing for a layer with no visible content but one of its descendant has some visible content.
The reverse case is already profusely tested.

* fast/layers/scroll-no-visible-content-but-visible-descendant-expected.html: Added.
* fast/layers/scroll-no-visible-content-but-visible-descendant.html: Added.


Canonical link: https://commits.webkit.org/94162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106191 268f45cc-cd09-0410-ab3c-d52691b4dbfc